[package]
name = "handwriting-scan-tool"
version = "0.1.0"
edition = "2021"
description = "Scan a page of handwriting and extract the letters as individual images. I use this tool when creating fonts based on handwriting."
license = "MIT"
repository = "https://github.com/Velfi/handwriting-scan-tool"
readme = "README.md"
keywords = ["handwriting", "scan", "font", "image", "processing"]
authors = ["Zelda Hessler <zelda.hessler@pm.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.0"
imageproc = "0.24.0"
